[b][color=orange]v5.62[/color], 10.02.2023[/b][list]
[*]Fix Feast Timer on EU again
[*]Let the MicroBar hide in Combat again by default[/list]