@@ -1,7 +1,7 @@
 <div align="center">
 <img src="m4.png"/><br>
-<img src="https://img.shields.io/badge/ElvUI-13.25-blue.svg?longCache=true&style=for-the-badge"/>
-<img src="https://img.shields.io/badge/Version-5.62-orange.svg?longCache=true&style=for-the-badge"/>
+<img src="https://img.shields.io/badge/ElvUI-13.27-blue.svg?longCache=true&style=for-the-badge"/>
+<img src="https://img.shields.io/badge/Version-5.63-orange.svg?longCache=true&style=for-the-badge"/>
 </div>
 
 ---
