@@ -1,4 +1,10 @@
 ### Changes ###
 
-  * Fix Feast Timer on EU again
-  * Let the MicroBar hide in Combat again by default
+  * Added new Role Icons: Material
+  * Added an Offline/ Death Indicator on the Party UnitFrames
+  * Prevent a possible error on the Friends List
+  * Updated Auctionator Skin
+  * Updated the Skin for the ElvUI ActionBars to take account for all ActionBars
+  * Added a Skin for GlobalIgnoreList
+  * Fixed an error on the PerksProgramm Skin if the shadows are disabled
+  * Updated some skins
